Update tiktok AutoSync test and add API to change product variations